[package]
name = "yinfo"
version = "0.2.1"
edition = "2021"

[profile.profiling]
inherits = "release"
debug = true

[[bench]]
name = "bench"
harness = false

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
rquickjs = { version = "0.6", features = ["futures", "parallel"] }
tokio = { version = "1.0", features = ["sync"] }
serde_json = "1.0"
once_cell = "1.19.0"
regex = "1.1"
dashmap = "6.0"
url = "2.5"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.3", features = ["async_tokio"] }
